# BBSchedule

./: .replit  DEPLOYMENT_GUIDE.md  ENHANCEMENT_PLAN.md  ENTERPRISE_SUMMARY.md  PRODUCTION_READINESS.md  README.md  SOP_COMPLIANCE_SUMMARY.md  app.py  config.py  database_optimization.py  enterprise_deployment.py  enterprise_init.py  enterprise_integration.py  enterprise_monitoring.py  enterprise_scalability.py  enterprise_security.py  error_handlers.py  extensions.py  forms.py  health_check.py  import_utils.py  linear_scheduling_guide.md  load_test_data.py  logger.py  main.py  models.py  models_backup.py  models_sop_compliance.py  monitoring.py  production_checklist.py  pyproject.toml  replit.md  requirements_enterprise.txt  requirements_production.txt  routes.py  routes_backup.py  routes_buildflow.py  routes_model.py  routes_sop.py  simple_test.py  (+5 more)
attached_assets/: Pasted--Integrated-Construction-Management-Platform-Development-Plan-Executive-Summary-This--1752849302542_1752849302542.txt
config/: __init__.py  production.py
core/: __init__.py  application.py  compliance.py  errors.py  health.py  middleware.py  monitoring.py  monitoring_legacy.py  security.py
deployment/: __init__.py  setup.py
docs/: DEPLOYMENT_GUIDE.md  __init__.py
services/: __init__.py  activity_service.py  advanced_ai_service.py  advanced_reporting_service.py  ai_service.py  analytics_service.py  bim_integration.py  buildflow_integration_service.py  collaboration_service.py  external_integrations.py  iot_field_service.py  ncmoh_schedule_importer.py  project_service.py  scheduling_service.py  (+2 more)
(+43 files in other folders)
