[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "sqlalchemy>=2.0.41",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "xmltodict>=0.14.2",
    "python-dateutil>=2.9.0.post0",
    "openpyxl>=3.1.5",
    "chardet>=5.2.0",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "requests>=2.32.4",
]
